--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <script src="js/script.js" defer></script>
   </head>
 
   <body>
