JS code to toggle light & dark mode, refactored

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bitter:ital@0;1&family=Hind:wght@300;400&family=Oswald:wght@300;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Indie+Flower&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -20,25 +20,25 @@
     <script src="js/script.js" defer></script>
   </head>
 
-  <body>
+  <body class="light">
     <main>
       <section class="food"></section>
       <section class="invitation">
+        <button type="button" class="dark-mode">
+          Dark Mode
+        </button>
+        <!--<button type="button" class="light-mode">
+          Light Mode
+        </button> only one button needed to control multiple style applications-->
         <h1>Let's have some <span class="big">noms!</span></h1>
-        <p class="dots, bigger">
-          Bring your favorite dish,<br />
-          we'll provide the drinks.
-        </p>
+        <p>Bring your favorite dish, we'll provide the drinks.</p>
         <p>
-          You can bring your 🐕‍🦺 furry friends. <br />Bring some food for them
-          too!
+          You can bring your 🐕‍🦺 furry friends. Bring some food for them too!
         </p>
-        <div class="location, fancy">
-          <p class="kindabig">
-            Saturday, 2pm<br />
-            @Leland Park<br />
-            RSVP on <i class="fab fa-instagram"></i>
-          </p>
+        <div class="location">
+          <p>Saturday, 2pm</p>
+          <p>@Leland Park</p>
+          <p>RSVP on <i class="fab fa-instagram"></i></p>
         </div>
       </section>
       <footer>
